Align Hotels page , fix margins

--- a/src/components/hotel/hotel.css
+++ b/src/components/hotel/hotel.css
@@ -92,7 +92,6 @@
   .card {
     margin-left: 5rem;
     width: 300px;
-    height: 550px;
     border-radius: 30px;
     margin-left: 20px;
   }
